--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -25,9 +25,10 @@ h4{
 }
 
 h6 {
-    color: blueviolet;
-    font-size: 200px;
-    text-align: center;
+  color: blueviolet;
+  font-size: 200px;
+  display: contents;
+  text-shadow: 2px 2px 1px red;
 }
 
 .ratings-container{
@@ -93,4 +94,7 @@ h6 {
 }
 .trophies {
     display: none;
+}
+.Card.col-sm-8 {
+  height: 400px;
 }
