--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -97,4 +97,5 @@ h6 {
 }
 .Card.col-sm-8 {
   height: 400px;
+  background-image: url(https://e0.pxfuel.com/wallpapers/74/40/desktop-wallpaper-a-cultural-evolution-of-shrek-from-blockbuster-hit-to-historic-meme-aesthetic-shrek.jpg);
 }
