--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -95,7 +95,6 @@ h6 {
 .trophies {
     display: none;
 }
-.Card.col-sm-8 {
-  height: 400px;
+.Card {
   background-image: url(https://e0.pxfuel.com/wallpapers/74/40/desktop-wallpaper-a-cultural-evolution-of-shrek-from-blockbuster-hit-to-historic-meme-aesthetic-shrek.jpg);
 }
