--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -1,100 +1,92 @@
-body {
-    font-family: "Comic Sans MS", "Comic Sans", cursive;
-}
-.ratings-row {
-  display:none !important;
-}
-.container {
-  max-width: none !important;
-  background-color: chartreuse;
-}
-h1 {
- color:orange;
-}
-
-h2 {
- color:#228B22;
-}
-
-h3 {
-   color: #228B22;
-  }
-
-h4{
-   color:  #228B22 ;
-}
-
-h6 {
-  color: blueviolet;
-  font-size: 200px;
-  display: contents;
-  text-shadow: 2px 2px 1px red;
-}
-
-.ratings-container{
-	background-color:chocolate;
-	 border:solid
-}
-
-.rating-entry{
-  color: coral;
-}
-
-.avatar-container .Player-username {
-    color: chocolate;
-}
-
-.active-games{
-	background-color:hotpink;
-	 border:solid
-}
-
-.move-number{
-  color: magenta;
-}
-
-.game-name{
-  color: magenta;
-}
-
-.Clock {
-  color: magenta;
-}
-
-.size {
-  color: magenta;
-}
-
-.Player-username {
-  color: magenta;
-}
-
-.Player-rank {
-  color: magenta;
-}
-
-.game_name {
-  color: magenta;
-}
-
-.board_size {
-  color: magenta;
-}
-
-.date {
-  color: magenta;
-}
-
-.user_info {
-  color: magenta;
-}
-
-.sortable {
-  color: magenta;
-}
-.trophies {
-    display: none;
-}
-.Card {
-  background-image: url(https://e0.pxfuel.com/wallpapers/74/40/desktop-wallpaper-a-cultural-evolution-of-shrek-from-blockbuster-hit-to-historic-meme-aesthetic-shrek.jpg);
-}
+.User {
+     font-family: Courier New;
+    background-image: linear-gradient(80deg, #000000,
+ #14142B,
+ #282856,
+ #42427E,
+ #5E5EAB);
+   background-size: 250%;
+   animation: gradient-animation 20s infinite alternate;
+   border: none;
+ }
+ 
+ @keyframes gradient-animation {
+   0% {
+     background-position: right;
+   }
+   100% {
+     background-position: left;
+   }
+ }
+ .ratings-container {
+   display: none !important;
+ }
+ .ratings-row {
+   display:none !important;
+ }
+ .col-sm-4 .Card{
+  display: none !important;
+ }
+ .col-sm-4 h2 {
+   display: none !important;
+ }
+ .col-sm-8{
+   width: 100% !important;;
+ }
+ .col-sm-8 .Card:first-child {
+  display: none;
+ }
+ .container {
+   max-width: none !important;
+ }
+ .country-line {
+   display: none !important;
+ }
+ .avatar-container .Player-username {
+    background: -webkit-linear-gradient(white, orange);
+   -webkit-background-clip: text;
+   -webkit-text-fill-color: transparent;
+ }
+ .avatar-container .Player-rank {
+    background: -webkit-linear-gradient(white, orange);
+   -webkit-background-clip: text;
+   -webkit-text-fill-color: transparent;
+ }
+ .avatar-subtext {
+   display: none;
+ }
+  .active-games {
+   background-image: url(https://i.ibb.co/ZTdxN6f/stars-space-galaxy-4k-1536013796.jpg);
+   background-size: contain;
+   width: 70%;
+   margin: auto;
+   border-radius: 150px;
+ }
+ .active-games h2 {
+   text-align: center;
+ }
+ h2 {
+   background: -webkit-linear-gradient(white, orange);
+   -webkit-background-clip: text;
+   -webkit-text-fill-color: transparent;
+ }
+ 
+ .game_name {
+   display: none;
+ }
+ 
+ .Clock {
+   color: white;
+ }
+ 
+ .inner-container {
+  color: white;
+   text-shadow: orange 1px 0 10px;
+ }
+ 
+ .Card {
+   background-image: url(https://i.ibb.co/ZTdxN6f/stars-space-galaxy-4k-1536013796.jpg);
+   background-size: contain;
+     color: white;
+     text-shadow: orange 1px 0 10px;
+ }
