--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -1,92 +1,96 @@
 .User {
-     font-family: Courier New;
-    background-image: linear-gradient(80deg, #000000,
- #14142B,
- #282856,
- #42427E,
- #5E5EAB);
-   background-size: 250%;
-   animation: gradient-animation 35s infinite alternate;
-   border: none;
- }
- 
- @keyframes gradient-animation {
-   0% {
-     background-position: right;
-   }
-   100% {
-     background-position: left;
-   }
- }
- .ratings-container {
-   display: none !important;
- }
- .ratings-row {
-   display:none !important;
- }
- .col-sm-4 .Card{
-  display: none !important;
- }
- .col-sm-4 h2 {
-   display: none !important;
- }
- .col-sm-8{
-   width: 100% !important;;
- }
- .col-sm-8 .Card:first-child {
-  display: none;
- }
- .container {
-   max-width: none !important;
- }
- .country-line {
-   display: none !important;
- }
- .avatar-container .Player-username {
-    background: -webkit-linear-gradient(white, orange);
-   -webkit-background-clip: text;
-   -webkit-text-fill-color: transparent;
- }
- .avatar-container .Player-rank {
-    background: -webkit-linear-gradient(white, orange);
-   -webkit-background-clip: text;
-   -webkit-text-fill-color: transparent;
- }
- .avatar-subtext {
-   display: none;
- }
-  .active-games {
-   background-image: url(https://i.ibb.co/ZTdxN6f/stars-space-galaxy-4k-1536013796.jpg);
-   background-size: contain;
-   width: 70%;
-   margin: auto;
-   border-radius: 150px;
- }
- .active-games h2 {
-   text-align: center;
- }
- h2 {
-   background: -webkit-linear-gradient(white, orange);
-   -webkit-background-clip: text;
-   -webkit-text-fill-color: transparent;
- }
- 
- .game_name {
-   display: none;
- }
- 
- .Clock {
-   color: white;
- }
- 
- .inner-container {
+  font-family: Courier New;
+ background-image: linear-gradient(80deg, #151a1f,
+#161e25,
+#17212b,
+#182532,
+#192938
+);
+background-size: 250%;
+animation: gradient-animation 35s infinite alternate;
+transform: rotate(0.5deg);
+}
+
+@keyframes gradient-animation {
+0% {
+  background-position: right;
+}
+100% {
+  background-position: left;
+}
+}
+.ratings-container {
+display: none !important;
+}
+.ratings-row {
+display:none !important;
+}
+.col-sm-4 .Card{
+display: none !important;
+}
+.col-sm-4 h2 {
+display: none !important;
+}
+.col-sm-8{
+width: 100% !important;;
+}
+.col-sm-8 .Card:first-child {
+display: none;
+}
+.container {
+max-width: none !important;
+}
+.country-line {
+display: none !important;
+}
+.avatar-container .Player-username {
+ background: -webkit-linear-gradient(white, orange);
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+}
+.avatar-container .Player-rank {
+ background: -webkit-linear-gradient(white, orange);
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+}
+.avatar-subtext {
+display: none;
+}
+.active-games {
+background-image: url(https://i.ibb.co/ZTdxN6f/stars-space-galaxy-4k-1536013796.jpg);
+background-size: contain;
+width: 70%;
+margin: auto;
+border-radius: 50px;
+}
+.active-games:hover {
+opacity: 0;
+}
+.active-games h2 {
+text-align: center;
+}
+h2 {
+background: -webkit-linear-gradient(white, orange);
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+}
+
+.game_name {
+display: none;
+}
+
+.Clock {
+color: white;
+}
+
+.inner-container {
+color: white;
+text-shadow: orange 1px 0 10px;
+}
+
+.Card {
+background-image: url(https://i.ibb.co/ZTdxN6f/stars-space-galaxy-4k-1536013796.jpg);
+background-size: contain;
   color: white;
-   text-shadow: orange 1px 0 10px;
- }
- 
- .Card {
-   background-image: url(https://i.ibb.co/ZTdxN6f/stars-space-galaxy-4k-1536013796.jpg);
-   background-size: contain;
-     color: white;
-     text-shadow: orange 1px 0 10px;
- }
+  text-shadow: orange 1px 0 10px;
+}
